<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navi"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".Setting">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="174dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo" />
        <Button
            android:id="@+id/change_password_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorPrimary"
            android:text="@string/change_password"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/change_email_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorPrimary"
            android:text="@string/change_email"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/delete_user_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorPrimary"
            android:text="@string/delete_user"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorPrimary"
            android:text="@string/sign_out"
            android:textColor="@color/white" /></LinearLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:background="@color/white"
        app:itemTextColor="@color/darkgray"
        app:itemIconTint="@color/darkgray"
        app:menu="@menu/drawermenu"
        android:layout_gravity ="start">
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>

